--- a/cpp/test/Freeze/dbmap/Makefile
+++ b/cpp/test/Freeze/dbmap/Makefile
@@ -40,19 +40,19 @@ ByteIntMap.cpp: $(SLICE2FREEZE) $(SLICEPARSERLIB)
 	$(SLICE2FREEZE) --dict Test::ByteIntMap,byte,int --dict-index "Test::ByteIntMap,sort" ByteIntMap
 
 IntIdentityMap.h: IntIdentityMap.cpp
-IntIdentityMap.cpp: $(slicedir)/Ice/Identity.ice $(SLICE2FREEZE) $(SLICEPARSERLIB)
+IntIdentityMap.cpp: $(ice_slicedir)/Ice/Identity.ice $(SLICE2FREEZE) $(SLICEPARSERLIB)
 	rm -f IntIdentityMap.h IntIdentityMap.cpp
-	$(SLICE2FREEZE) --ice $(SLICE2CPPFLAGS)  --dict Test::IntIdentityMap,int,Ice::Identity IntIdentityMap $(slicedir)/Ice/Identity.ice
+	$(SLICE2FREEZE) --ice $(SLICE2CPPFLAGS)  --dict Test::IntIdentityMap,int,Ice::Identity IntIdentityMap $(ice_slicedir)/Ice/Identity.ice
 
 IntIdentityMapWithIndex.h: IntIdentityMapWithIndex.cpp
-IntIdentityMapWithIndex.cpp: $(slicedir)/Ice/Identity.ice $(SLICE2FREEZE) $(SLICEPARSERLIB)
+IntIdentityMapWithIndex.cpp: $(ice_slicedir)/Ice/Identity.ice $(SLICE2FREEZE) $(SLICEPARSERLIB)
 	rm -f IntIdentityMapWithIndex.h IntIdentityMapWithIndex.cpp
-	$(SLICE2FREEZE) --ice $(SLICE2CPPFLAGS) --dict Test::IntIdentityMapWithIndex,int,Ice::Identity --dict-index Test::IntIdentityMapWithIndex,category IntIdentityMapWithIndex $(slicedir)/Ice/Identity.ice
+	$(SLICE2FREEZE) --ice $(SLICE2CPPFLAGS) --dict Test::IntIdentityMapWithIndex,int,Ice::Identity --dict-index Test::IntIdentityMapWithIndex,category IntIdentityMapWithIndex $(ice_slicedir)/Ice/Identity.ice
 
 SortedMap.h: SortedMap.cpp
-SortedMap.cpp: $(slicedir)/Ice/Identity.ice $(SLICE2FREEZE) $(SLICEPARSERLIB)
+SortedMap.cpp: $(ice_slicedir)/Ice/Identity.ice $(SLICE2FREEZE) $(SLICEPARSERLIB)
 	rm -f SortedMap.h SortedMap.cpp
-	$(SLICE2FREEZE)  --ice $(SLICE2CPPFLAGS) --dict Test::SortedMap,int,Ice::Identity,sort SortedMap --dict-index "Test::SortedMap,category,sort,std::greater<std::string>" $(slicedir)/Ice/Identity.ice
+	$(SLICE2FREEZE)  --ice $(SLICE2CPPFLAGS) --dict Test::SortedMap,int,Ice::Identity,sort SortedMap --dict-index "Test::SortedMap,category,sort,std::greater<std::string>" $(ice_slicedir)/Ice/Identity.ice
 
 WstringWstringMap.h: WstringWstringMap.cpp
 WstringWstringMap.cpp: $(SLICE2FREEZE) $(SLICEPARSERLIB)
