Fix for building against bindist on OSX

--- a/java/build.gradle
+++ b/java/build.gradle
@@ -29,6 +29,9 @@ subprojects {
         maven {
             url 'https://repo.zeroc.com/nexus/content/repositories/thirdparty'
         }
+        maven {
+            url 'https://repo.zeroc.com/nexus/content/repositories/releases'
+        }
     }
 
     jar {
