Removed ice submodule

--- a/cpp/test/Freeze/dbmap/Makefile
+++ b/cpp/test/Freeze/dbmap/Makefile
@@ -26,7 +26,7 @@ GENPIC          = no
 
 include $(top_srcdir)/make/Make.rules
 
-CPPFLAGS	:= -I. -I../../include $(CPPFLAGS) $(TESTCPPFLAGS)
+CPPFLAGS	:= -I. -I../../include $(CPPFLAGS)
 
 $(CLIENT): $(OBJS)
 	rm -f $@
