--- a/cpp/test/Freeze/fileLock/Makefile
+++ b/cpp/test/Freeze/fileLock/Makefile
@@ -24,7 +24,7 @@ GENPIC          = no
 
 include $(top_srcdir)/make/Make.rules
 
-CPPFLAGS	:= -I. -I../../include $(CPPFLAGS) $(TESTCPPFLAGS)
+CPPFLAGS	:= -I. -I../../include $(CPPFLAGS)
 
 $(CLIENT): $(COBJS)
 	rm -f $@
