--- a/cpp/test/FreezeScript/evictor/Makefile
+++ b/cpp/test/FreezeScript/evictor/Makefile
@@ -20,7 +20,7 @@ OBJS		= $(SLICE_OBJS) \
 
 include $(top_srcdir)/make/Make.rules
 
-CPPFLAGS	:= -I. $(CPPFLAGS) $(TESTCPPFLAGS)
+CPPFLAGS	:= -I. $(CPPFLAGS)
 
 $(CLIENT): $(OBJS)
 	rm -f $@
