--- a/java/settings.gradle
+++ b/java/settings.gradle
@@ -14,6 +14,7 @@ include ':test'
 // Map of dir->subdir for each of the demos.
 def demos = [
         'Freeze' : ['bench', 'casino', 'library', 'phonebook', 'transform'],
+        'Manual' : ['evictorFilesystem', 'mapFilesystem'],
 ]
 
 demos.each {
