--- a/cpp/src/Freeze/Freeze.rc
+++ b/cpp/src/Freeze/Freeze.rc
@@ -27,7 +27,7 @@ BEGIN
             VALUE "InternalName", INTERNALNAME
             VALUE "LegalCopyright", "\251 2003-2015 ZeroC, Inc.\0"
             VALUE "OriginalFilename", ORIGINALFILENAME
-            VALUE "ProductName", "Ice\0"
+            VALUE "ProductName", "Freeze\0"
             VALUE "ProductVersion", "3.7.0\0"
         END
     END
