--- a/cpp/src/slice2freeze/Slice2Freeze.rc
+++ b/cpp/src/slice2freeze/Slice2Freeze.rc
@@ -23,7 +23,7 @@ BEGIN
             VALUE "InternalName", "slice2freeze\0"
             VALUE "LegalCopyright", "\251 2003-2015 ZeroC, Inc.\0"
             VALUE "OriginalFilename", "slice2freeze.exe\0"
-            VALUE "ProductName", "Ice\0"
+            VALUE "ProductName", "Freeze\0"
             VALUE "ProductVersion", "3.7.0\0"
         END
     END
