--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ install:
 - CPPFLAGS=-fPIC make -C ${LMDB_BUILD_DIR}/libraries/liblmdb install prefix=${LMDB_HOME}
 - rm -f ${LMDB_HOME}/lib/liblmdb.so
 - pip install passlib
-- make -C ${ICE_HOME}/cpp/src -j3
+- make BUILD_ICE_BT=no -C ${ICE_HOME}/cpp/src -j3
 - make -C ${ICE_HOME}/java -j3
 - make -j3
 script:
